[gd_scene load_steps=12 format=3 uid="uid://bp4qsothxd80g"]

[ext_resource type="Script" uid="uid://bbncc441ssy0o" path="res://injured.gd" id="1_heuca"]
[ext_resource type="Script" uid="uid://3bi02tndcxdg" path="res://addons/ateneo-virtual-reality-escape/object-interaction-system/ois-receiver/ois_twist_receiver.gd" id="2_as5ff"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f8pag"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_k55h8"]
material = SubResource("StandardMaterial3D_f8pag")
radius = 0.1
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rj7r8"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8xfjp"]
material = SubResource("StandardMaterial3D_rj7r8")
radius = 0.05
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nfua4"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j33ko"]
material = SubResource("StandardMaterial3D_nfua4")
radius = 0.05
height = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cb4hb"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_sp84e"]
material = SubResource("StandardMaterial3D_cb4hb")
radius = 0.1
height = 0.25

[sub_resource type="SphereShape3D" id="SphereShape3D_awwxl"]
radius = 0.136728

[node name="Injured" type="Node3D"]
script = ExtResource("1_heuca")

[node name="Mesh" type="Node3D" parent="."]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Mesh"]
mesh = SubResource("CapsuleMesh_k55h8")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.991903, -0.126995, 0, 0.126995, 0.991903, 0, 0, 0, 1, 0.0681005, -0.334436, 0)
mesh = SubResource("CapsuleMesh_8xfjp")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.991894, 0.127065, 0, -0.127065, 0.991894, 0, 0, 0, 1, -0.068, -0.334436, 0)
mesh = SubResource("CapsuleMesh_8xfjp")

[node name="ArmMesh" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.724172, -0.68962, 0, 0.68962, 0.724172, 0, 0, 0, 1, 0.187, 0.048, 0)
mesh = SubResource("CapsuleMesh_j33ko")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(0.724172, 0.68962, 0, -0.68962, 0.724172, 0, 0, 0, 1, -0.187, 0.048, 0)
mesh = SubResource("CapsuleMesh_8xfjp")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.283861, 0)
mesh = SubResource("SphereMesh_sp84e")

[node name="OISTwistReceiver" type="Node3D" parent="."]
script = ExtResource("2_as5ff")
single_direction = true
group = "bandage"
requirement = 1.0
metadata/_custom_type_script = "uid://3bi02tndcxdg"

[node name="Area3D" type="Area3D" parent="OISTwistReceiver"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.220224, 0, -0.0172956)
collision_layer = 536870912
collision_mask = 536870912

[node name="CollisionShape3D" type="CollisionShape3D" parent="OISTwistReceiver/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.290985, 0, 0.0425801)
shape = SubResource("SphereShape3D_awwxl")

[connection signal="action_completed" from="OISTwistReceiver" to="." method="_on_ois_twist_receiver_action_completed"]
[connection signal="action_ended" from="OISTwistReceiver" to="." method="_on_ois_twist_receiver_action_ended"]
[connection signal="action_in_progress" from="OISTwistReceiver" to="." method="_on_ois_twist_receiver_action_in_progress"]
[connection signal="action_started" from="OISTwistReceiver" to="." method="_on_ois_twist_receiver_action_started"]
